Update dependency verification metadata and resolve Javadoc warnings (CP-0089)